# aws-dynamodb-testing

./: Cargo.toml  flake.nix  justfile
.config/flakebox/: id
.github/workflows/: flakebox-ci.yml
src/: command_line.rs  constants.rs  dynamodb.rs  logging.rs  main.rs  tests.rs  utils.rs
src/dynamodb/: client.rs  item.rs  mod.rs  schema.rs  table.rs
